# EAOS

./: .gitignore  .gitmodules  AGENTS.md  CUSTOM_COPILOT_AGENT_DESIGN_PROMPT.md  Claude_EXPLAINS_20251230_CZA.md  DEEPDIVE_LEDGER_20251230_CZA.md  DEEPDIVE_MUSCLE_CONTRACT_20251230_CZA.md  DEEPDIVE_ORGANELLES_20251230_CZA.md  DEEPDIVE_REFEREE_NUCLEUS_20251230_CZA.md  DEEPDIVE_SYMBIOTE_20251230_CZA.md  EAOS_MASTER_SUMMARY_20251230_CZA.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_REMEDIATION_PLAN.md  MIGRATION_VERIFICATION_REPORT.md  MIGRATION_VERIFICATION_SUMMARY.md  MONOREPO_SPLIT_QUICKREF.md  README.md  VERIFICATION_COMPLETE.md
Ea_OS/: .cursorrules  .gitignore  ARCHITECTURE.md  BIOWERK_STATUS_20260120.md  COPILOT_MIGRATION_PROMPT.md  Cargo.toml  DECISIONS_20251228_171652.md  DEEPSEEK_ROADMAP_v1.md  DEEPSEEK_ledger_response_01.md  EAOS_COMPLETE_REPO.txt  EAOS_CONTEXT.md  EAOS_INNOVATOR_UPDATE_20260120.md  EAOS_INNOVATOR_UPDATE_TECHNICAL.md  EAOS_KNOWLEDGE_BASE.txt  EAOS_LEVEL_1_DOCS.txt  EAOS_LEVEL_2_ABI.txt  EAOS_LEVEL_3_KERNEL.txt  EAOS_LEVEL_4_MUSCLES.txt  EAOS_LEVEL_5_TOOLS.txt  EAOS_QA_AUDIT_20260120.md  EAOS_QA_AUDIT_TECHNICAL.md  Ea_EBNF.md  FIX_PLAN_20260120.md  FUTURE_IMPLEMENTATION_PLAN.md  GEMINI.md  GUIDE_20251229_142903.md  HANDOFF_20260106_071348.md  HANDOFF_FINAL_v1.0.md  HANDOFF_IHP_FIXES_20260125.md  HANDOFF_MAGUS_001  HANDOFF_v1.md  HANDOFF_v2.md  HANDOFF_v3.md  IHP_FIXES_REPORT_20260125.md  IMPLEMENTATION_REPORT_20260120_PART10.md  IMPLEMENTATION_REPORT_20260120_PART11.md  IMPLEMENTATION_REPORT_20260120_PART12.md  IMPLEMENTATION_REPORT_20260120_PART13.md  IMPLEMENTATION_REPORT_20260120_PART14.md  IMPLEMENTATION_REPORT_20260120_PART15.md  (+42 more)
Ea_OS/IHP-main/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  ci.sh  golden_capsule_v1.json
Ea_OS/IHP-main/.cargo/: config.toml
Ea_OS/IHP-main/.github/: CODEOWNERS
Ea_OS/IHP-main/docs/: RUNBOOK.md
Ea_OS/IHP-main/examples/: client_demo.rs  gen_fixture.rs  observability_demo.rs
Ea_OS/IHP-main/fuzz/: .gitignore  Cargo.toml
Ea_OS/IHP-main/scripts/: check_fixture.sh
Ea_OS/IHP-main/src/: client.rs  lib.rs  server.rs
Ea_OS/IHP-main/tests/: client_helper.rs  fixture_check.rs  fixture_inputs.rs  http_server.rs  movement.rs  observability.rs
Ea_OS/Intelligence/grok_ppo_enterprise-main/: QUICKSTARTGUIDE.md  README.md  design_with_ork.py  generate_docs_with_ork.py  install.sh  ork-ide.sh  pyproject.toml  repo_structure.md  start-ork.sh
Ea_OS/Intelligence/nucleus-director/: Cargo.toml
Ea_OS/Organs/BIOwerk-main/: .dockerignore  .editorconfig  .env.example  .env.production  .env.staging  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AUDIT_LOGGING_IMPLEMENTATION.md  AUTH.md  BUGFIXES.md  CONTRIBUTING.md  CROSS_PLATFORM_SETUP.md  DATABASE.md  LLM_INTEGRATION.md  MODELS_SETUP.md  MONITORING_QUICKSTART.md  Makefile  OLLAMA_SETUP.md  PGBOUNCER-QUICKSTART.md  PGBOUNCER.md  README.md  STOOGES.md  TESTING-PGBOUNCER.md  TOKEN_BUDGET_GUIDE.md  alembic.ini  auth_service.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  retention_service.py  setup.cfg  setup.py  suite.yaml
Ea_OS/Organs/biowerk-agent/: Cargo.toml
Ea_OS/Organs/cardio/: Cargo.toml
Ea_OS/Organs/prism/: Cargo.toml
Ea_OS/Organs/untitled-main/: .spark-initial-sha  PRD.md  index.html  runtime.config.json
Ea_OS/Signals/protocol-format-guid-main/: .spark-initial-sha  PRD.md  index.html  runtime.config.json
Ea_OS/Signals/quenyan/: .gitignore  benchmark_output.json  noxfile.py  quenyan_code_idea.txt
Ea_OS/Signals/quenyan-main-2/: Grok Thoughts  README.md  pyproject.toml  tox.ini
Ea_OS/defense/sefirot/: Cargo.toml
Ea_OS/docs/: PROJECT_ARACHNID_20260118T171824Z.md  ea_ledger_protocol.md  ledgerd_runbook.md  muscle-contract-v6.md  nucleus-api.md
Ea_OS/ledger/: Cargo.toml  README.md  deepseek_breakdown_integration.md
Ea_OS/ledger/arda/: Cargo.toml
Ea_OS/ledger/benches/: benchmarks.rs
Ea_OS/ledger/core/: Cargo.toml
Ea_OS/ledger/ledgerd/: Cargo.toml  local_vm.toml
Ea_OS/ledger/spec/: Cargo.toml
Ea_OS/ledger/src/: consts.rs  lib.rs
Ea_OS/ledger/tests/: integration.proptest-regressions  integration.rs  ledger_end_to_end.rs  ledgerd_daemon_shared_registry.rs  ledgerd_ipc.rs  ledgerd_shared_transport.rs  ledgerd_status.rs  support.rs
Ea_OS/ledger/transport/: Cargo.toml  build.rs
Ea_OS/ledger/ui-shell/: Cargo.toml
Ea_OS/manifests/: eaos_v1.json  sovereign_health.json
Ea_OS/muscle-compiler/: Cargo.toml
Ea_OS/muscle-compiler/examples/: feanor.py
Ea_OS/muscle-compiler/src/: crypto.rs  error.rs  main.rs  parser.rs
Ea_OS/muscle-contract/: Cargo.toml
Ea_OS/muscle-contract/src/: abi.rs  broca.rs  dreamer.rs  lib.rs  mirror.rs  mitochondria.rs  sentry.rs
Ea_OS/muscle-contract/vectors/: README.md  v6_vector_01.json
Ea_OS/muscle-ea-axonwasm/: Cargo.toml  grok_nextsteps.md
Ea_OS/muscle-ea-axonwasm/src/: lib.rs
Ea_OS/muscle-ea-core/: Cargo.toml
Ea_OS/muscle-ea-core/src/: biology.rs  crypto.rs  error.rs  lib.rs  runtime.rs
Ea_OS/muscle-ea-dendritewasm/: Cargo.toml
Ea_OS/muscle-ea-dendritewasm/src/: lib.rs
Ea_OS/muscle-ea-neurowasm/: Cargo.toml
Ea_OS/muscle-ea-neurowasm/src/: lib.rs
Ea_OS/muscle-ea-pathfinder/: Cargo.toml
Ea_OS/muscle-ea-pathfinder/src/: lib.rs
Ea_OS/muscles/: nucleus.ea  nucleus_complete.ea  pathfinder-example.ea
Ea_OS/muscles/antibody/: Cargo.toml
Ea_OS/muscles/atlas/: Cargo.toml
Ea_OS/muscles/broca/: Cargo.toml
Ea_OS/muscles/dreamer/: Cargo.toml
Ea_OS/muscles/hyperbolic-chamber/: CODEX_START_HERE.md  Cargo.toml  PRODUCTION_ASSESSMENT.md  (+3 more)
Ea_OS/nucleus/: Cargo.toml  build.rs
Ea_OS/referee/: Cargo.toml  build.rs
Ea_OS/scripts/: build-all.sh  build-nucleus.sh  build-nucleus.sh.before-preloader-blob-link.20260108_030815  build-nucleus.sh.before-preloader-blob-update.20260107_204829  make-disk.sh  make-iso.sh
Ea_OS/symbiote/: Cargo.toml  deepseek_symbiote_gen_01.md
Ea_OS/tests/: cataclysm_test.sh  full_cycle_test.sh  quarterly_report.qyn
Ea_OS/web/: neon-systole.html
(+978 files in other folders)
