[package]
name = "ihp"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.10"
rand_core = "0.6"
rand_chacha = "0.3"
rand = { version = "0.8", features = ["std"] }
zeroize = { version = "1.7", features = ["zeroize_derive", "serde"] }
subtle = "2.5"
tracing = { version = "0.1", optional = true }
metrics = { version = "0.23", optional = true }
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.5"

[dev-dependencies]
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["registry"] }
bincode = "1.3"

[features]
observability = ["tracing", "metrics"]
experimental_v2 = []
