[package]
name = "ea-lattice-ledger"
version = "1.0.0"
edition = "2021"
authors = ["Eä Foundation <contact@ea.foundation>"]
description = "Trustless, fixed-size, hash-only global ledger via quadratic residue lattice"
repository = "https://github.com/ea-foundation/lattice-ledger"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "ledger", "zero-trust", "muscle", "ea", "blockchain", "zk"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std = []
bench = []

[dependencies]
blake3 = { version = "1.5", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5" }
ed25519-dalek = { workspace = true }
ledger-core = { path = "core" }
ledger-spec = { path = "spec" }
ledger-transport = { path = "transport" }
proptest = { version = "1.0" }
rand_core = { workspace = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
tempfile = "3.10"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "lattice_benchmarks"
path = "benches/benchmarks.rs"
harness = false
