[package]
name = "muscle-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Eä Foundation"]
description = "Compiler for Eä Muscles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
nom = { version = "8.0.0", features = ["std"] }
once_cell = "1.17"
regex = "1.10"
thiserror = "1.0"
muscle-contract = { path = "../muscle-contract" }
blake3 = { workspace = true }
rand_core = { workspace = true }
# Add other dependencies as needed based on src imports

[[bin]]
name = "musclec"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
