[package]
name = "muscle-contract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Muscle blob contract definitions and compatibility harness"

[dependencies]
blake3 = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"], optional = true }
hex = { version = "0.4", optional = true }
serde = { workspace = true, optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["std", "crypto"]
std = []
crypto = ["dep:blake3", "dep:rand_core", "dep:chacha20poly1305", "dep:hex"]
serde = ["dep:serde", "dep:serde_json"]

[[bin]]
name = "muscle-contract-gen"
path = "src/bin/gen_vectors.rs"
required-features = ["serde"]
