[package]
name = "muscle-ea-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Core biological substrate for Eä Muscle ecosystem - shared types, traits, and cryptographic primitives"
authors = ["Eä Foundation"]
repository = "https://github.com/ea-foundation/ea-os"
keywords = ["biological-computing", "capability-security", "cryptography", "muscle-ea"]
categories = ["cryptography", "no-std"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }
thiserror = { version = "1.0", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
blake3 = { version = "1.5", default-features = false }
aes-gcm = { version = "0.10", features = ["aes"] }
hex = "0.4"
wasmtime = "24.0"

[features]
default = ["std"]
std = ["thiserror", "rand_core/std"]
no-std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
