[package]
name = "muscle-ea-neurowasm"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "NeuroWasmMuscle — first true hybrid organ of the Eä lineage: native Eä bytecode interpreter fused with living WASM organelles for hyper-adaptive computation"
authors = ["Eä Foundation"]
repository = "https://github.com/ea-foundation/ea-os"
keywords = ["muscle-ea", "hybrid-organ", "neurosymbolic", "wasm", "bytecode"]
categories = ["cryptography", "concurrency", "wasm", "emulation"]

[dependencies]
muscle-ea-core = { path = "../muscle-ea-core", version = "0.1" }
muscle-ea-pathfinder = { path = "../muscle-ea-pathfinder", version = "0.1" }
wasmtime = { version = "24.0", features = ["component-model", "cranelift"] }
sha3 = "0.10"
rand_core = "0.6"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
smallvec = "1.13"
lru = "0.12"  # ADDED: Missing dependency
once_cell = "1.19"  # ADDED: For OnceCell replacement

[dev-dependencies]
proptest = "1.5"
hex-literal = "0.4"

[features]
default = ["std"]
std = []
no-std = ["alloc"]
alloc = []
