[package]
name = "muscle-ea-pathfinder"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Specialized Pathfinder Muscle for the Eä biological compute substrate — WASM-based secure evaluation organ with zero sandbox escape, fully integrated into the living Muscle.ea tissue architecture"
authors = ["Eä Foundation"]
repository = "https://github.com/ea-foundation/ea-os"
keywords = ["muscle-ea", "biological-compute", "secure-enclave", "wasm", "capability"]
categories = ["cryptography", "concurrency", "wasm"]

[dependencies]
muscle-ea-core = { path = "../muscle-ea-core", version = "0.1" }
wasmtime = { version = "24.0", default-features = false, features = ["cranelift", "component-model"] }
rand_core = "0.6"
aes-gcm = "0.10"
hmac = "0.12"
sha3 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
derive_more = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std"]
std = []
no-std = []
serde = ["dep:serde"]

[dev-dependencies]
hex-literal = "0.4"
