[package]
name = "muscle-nucleus"
version = "0.1.0"
description = "The first true biological kernel - 8KiB of pure life"
authors = ["Eä Foundation"]
edition = "2021"

[features]
default = []
std = []
no_std = []

[dependencies]
ea-ledger = { package = "ea-lattice-ledger", path = "../ledger" }
ea-symbiote = { path = "../symbiote" }
ea-referee = { package = "referee", path = "../referee" }
linked_list_allocator = { version = "0.10", default-features = false, features = ["const_mut_refs", "use_spin"] }

[lib]
name = "nucleus"
path = "src/lib.rs"

[[bin]]
name = "nucleus"
path = "src/main.rs"
