[package]
name = "ea-symbiote"
version = "0.1.0"
edition = "2021"
authors = ["Eä Foundation <contact@ea.foundation>"]
description = "Cryptographic immune system for Eä ecosystem - autonomous security response via lattice policies"
repository = "https://github.com/ea-foundation/symbiote"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "security", "immune-system", "muscle", "ea", "lattice"]
categories = ["cryptography", "no-std", "security"]
readme = "README.md"

[features]
default = []
std = []
test = []
bench = []

[dependencies]
ea-lattice-ledger = { path = "../ledger", version = "1.0" }
blake3 = { version = "1.5", default-features = false }
log = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5" }

[[bench]]
name = "symbiote_benchmarks"
harness = false
