[package]
name = "nucleus-director"
version = "0.2.0"
edition = "2021"
description = "Nucleus Director - Central orchestration for EAOS Office Suite"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nucleus"
path = "src/main.rs"

[features]
default = ["std"]
std = []

[dependencies]
biowerk-agent = { path = "../../organs/biowerk-agent" }
ea-symbiote = { path = "../../muscles/symbiote" }
ea-cardio = { path = "../../organs/cardio" }
roulette-rs = { path = "../../muscles/roulette-rs" }
permfs = { path = "../../permfs", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
ea-cardio = { path = "../../organs/cardio" }
ea-symbiote = { path = "../../muscles/symbiote" }
