[package]
name = "nucleus-director"
version = "0.2.0"
edition = "2021"
description = "Nucleus Director - Central orchestration for EAOS Office Suite"
license = "MIT OR Apache-2.0"

[[bin]]
name = "nucleus"
path = "src/main.rs"

[features]
default = ["std"]
std = ["biowerk-agent/std", "ea-symbiote/std", "ea-cardio/std", "roulette-rs/std", "permfs/std", "serde/std"]
no-std = ["alloc"]
alloc = []

[dependencies]
biowerk-agent = { path = "../../organs/biowerk-agent", default-features = false }
ea-symbiote = { path = "../../muscles/symbiote", default-features = false }
ea-cardio = { path = "../../organs/cardio", default-features = false }
roulette-rs = { path = "../../muscles/roulette-rs", default-features = false }
permfs = { path = "../../permfs", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
muscle-contract = { path = "../../muscle-contract", default-features = false }
ed25519-dalek = { workspace = true, default-features = false }
blake3 = { workspace = true, default-features = false }
ea-broca = { path = "../../muscles/broca", default-features = false }
ea-dreamer = { path = "../../muscles/dreamer", default-features = false }
ea-quenyan = { path = "../../muscles/quenyan-vm", default-features = false }
ea-sentry = { path = "../../muscles/sentry", default-features = false }
ea-mitochondria = { path = "../../muscles/mitochondria", default-features = false }
ea-mirror = { path = "../../muscles/mirror", default-features = false }
heapless = "0.7"

[dev-dependencies]
ea-cardio = { path = "../../organs/cardio" }
ea-symbiote = { path = "../../muscles/symbiote" }
