[metadata]
name = biowerk-matrix
version = 0.1.0
description = Shared library for BIOwerk microservices - Core utilities, models, auth, database, and LLM integration
long_description = file: README.md
long_description_content_type = text/markdown
author = BIOwerk Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi>=0.115.0
    uvicorn>=0.30.6
    pydantic>=2.9.2

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=8.3.3
    pytest-asyncio>=0.23.8
    pytest-cov>=6.0.0
    black>=24.10.0
    isort>=5.13.2
    flake8>=7.1.1
    pylint>=3.0.0
    mypy>=1.11.0
    pre-commit>=3.8.0

[bdist_wheel]
universal = 0
