[package]
name = "biowerk-agent"
version = "0.2.0"
edition = "2021"
description = "BIOwerk Office Suite for EAOS - Osteon (Documents), Myocyte (Logic)"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []

[dependencies]
ea-symbiote = { path = "../../muscles/symbiote", default-features = false }
ea-quenyan = { path = "../../muscles/quenyan-vm", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
