[package]
name = "ledger-arda"
version = "0.1.0"
edition = "2021"
authors = ["Ea Foundation"]
description = "Arda client/orchestrator for ledger-backed command submission and replay"
license = "MIT OR Apache-2.0"

[lib]
name = "ledger_arda"
path = "src/lib.rs"

[[bin]]
name = "arda"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "sync", "fs", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true, features = ["std"] }

ledger-core = { path = "../core" }
ledger-spec = { path = "../spec" }
ledger-transport = { path = "../transport" }

[dev-dependencies]
rand_core = { workspace = true }
