[package]
name = "ledgerd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ledger-core = { path = "../core" }
ledger-transport = { path = "../transport" }
ledger-spec = { path = "../spec" }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true, features = ["std"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prometheus = "0.13"
axum = { version = "0.7", features = ["json"] }
