[package]
name = "ledger-spec"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
serde-big-array = "0.5"
