[package]
name = "ea-antibody"
version = "0.1.0"
edition = "2021"
authors = ["Ea Foundation"]
description = "Antibody - Auto-immune Fuzzer for EAOS"

[dependencies]
muscle-contract = { path = "../../muscle-contract", default-features = false }
ea-symbiote = { path = "../symbiote", default-features = false }

[lib]
crate-type = ["rlib"]
