[package]
name = "hyperbolic-chamber"
version = "0.1.0"
edition = "2021"
description = "Task planner and deployment engine for EAOS"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "1.0"
which = "5.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
flate2 = { version = "1.0", features = ["zlib"] }
tar = "0.4"
bzip2 = "0.4"
xz2 = "0.1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
regex = "1.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"
rand_core = "0.6"
hex = "0.4"